feat(backend): done with task core, add task domain handlers, update usecases, update teams logic, add task model, update migration, add more task repo helper methods, update swagger #15
